modified git ignore added dataset

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,7 @@ ENV/
 
 # Rope project settings
 .ropeproject
+weka-3-9-1/
+dataset/dengue_features_train.csv
+dataset/dengue_labels_train.csv
+dataset/submission_format.csv
